--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -27,10 +27,12 @@ jobs:
           sudo apt-get update -qq --yes
           sudo apt-get install python3-pip --yes
           sudo sh helper/install_deps.sh
-          pip install -r ./tests/requirements.txt
+          # install via sudo to run pytest as root - see below
+          sudo pip install -r ./tests/requirements.txt
           sudo systemctl disable --now privoxy || true
 
       - name: run pytest
         run: |
           sudo pkill -9 privoxy || true
-          pytest -v -s --color yes tests/
+          # run pytest as sudo to allow pytestshellutils to stop privoxy
+          sudo pytest -v -s --color yes tests/
