add debug output for RUNNER_DEBUG=1
Signed-off-by: Andrwe@Gitlab <alw+gitlab@andrwe.org>

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,6 +1,9 @@
 ---
 # yamllint disable rule:line-length
 name: "Test Suite"
+env:
+  ACTIONS_STEP_DEBUG: ${{ vars.ACTIONS_STEP_DEBUG }}
+  RUNNER_DEBUG: ${{ runner.debug }}
 
 "on":
   push:
