--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
-        if: ${{ runner.debug || vars.ACTIONS_STEP_DEBUG == "true" }}
+        if: ${{ runner.debug || vars.ACTIONS_STEP_DEBUG == 'true' }}
         with:
           limit-access-to-actor: true
 
