--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,6 +33,13 @@ repos:
           - 'DL3008'
           - '--ignore'
           - 'DL3013'
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.13.2
+    hooks:
+      - id: isort
+        args:
+          - '--profile'
+          - 'black'
   - repo: https://github.com/psf/black
     rev: 23.12.1
     hooks:
@@ -52,11 +59,29 @@ repos:
           - '--profile'
           - '.ci_config/prospector.yaml'
         additional_dependencies:
+          # cannot use with_ syntax as pre-commit.ci does not support it
           - bandit
+          - mccabe
+          - mypy
+          - pydocstyle
+          - pylint
           - pytest
           - pytest-shell-utilities
+          - requests
+          - types-requests
   - repo: https://github.com/sirosen/check-jsonschema
     rev: 0.27.3
     hooks:
       - id: check-github-workflows
       - id: check-github-actions
+  - repo: local
+    hooks:
+      - id: permission-check
+        name: check permissions using pytest
+        entry: pytest -v -s -k test_permissions tests/test_00_minimal.py
+        language: python
+        pass_filenames: false
+        additional_dependencies:
+          - pytest
+          - pytest-shell-utilities
+          - requests
