fix dependabot config
Signed-off-by: Andrwe Lord Weber <github@andrwe.org>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,9 +5,9 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
-      time: 12:00
+      time: "12:00"
   - package-ecosystem: "pip"
     directory: "/tests"
     schedule:
       interval: "weekly"
-      time: 12:00
+      time: "12:00"
