optimize id & class matching rules
Signed-off-by: Andrwe Lord Weber <github@andrwe.org>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,12 @@ repos:
     rev: v3.7.0.1
     hooks:
       - id: shfmt
+        args:
+          - "--binary-next-line"
+          - "--case-indent"
+          - "--indent"
+          - "4"
+          - "--space-redirects"
   - repo: https://github.com/AleksaC/hadolint-py
     rev: v2.12.0.3
     hooks:
