move testwebserver to conftest.py
Signed-off-by: Andrwe Lord Weber <github@andrwe.org>

--- a/.ci_config/prospector.yaml
+++ b/.ci_config/prospector.yaml
@@ -13,3 +13,10 @@ bandit:
 
 mypy:
   run: true
+
+pydocstyle:
+  disable:
+    # conflicts with D211
+    - D203
+    # conflicts with D211
+    - D212
