update test configurations
Signed-off-by: Andrwe Lord Weber <github@andrwe.org>

--- a/tests/configs/debugging.conf
+++ b/tests/configs/debugging.conf
@@ -7,6 +7,11 @@ URLS=(
   "https://easylist-downloads.adblockplus.org/easylist.txt"
 )
 
+# array of content filters to convert
+#   for supported values check: $0 -h
+#   empty by default to deactivate as content filters slowdown privoxy a lot
+FILTERS=()
+
 # config for privoxy initscript providing PRIVOXY_CONF, PRIVOXY_USER and PRIVOXY_GROUP
 #INIT_CONF="/etc/conf.d/privoxy"
 
