--- a/tests/configs/url_extended_config.conf
+++ b/tests/configs/url_extended_config.conf
@@ -8,6 +8,11 @@ URLS=(
   "https://raw.githubusercontent.com/easylist/easylist/master/easylist/easylist_allowlist_general_hide.txt"
 )
 
+# array of content filters to convert
+#   for supported values check: $0 -h
+#   empty by default to deactivate as content filters slowdown privoxy a lot
+FILTERS=()
+
 # config for privoxy initscript providing PRIVOXY_CONF, PRIVOXY_USER and PRIVOXY_GROUP
 #INIT_CONF="/etc/conf.d/privoxy"
 
