document installation & improve install_deps.sh
* readme: document installation routine
* readme: document usage with content filter
* install_deps: support running without configuring HTTPS inspection

Signed-off-by: Andrwe Lord Weber <github@andrwe.org>

--- a/tests/Dockerfile_ubuntu
+++ b/tests/Dockerfile_ubuntu
@@ -3,6 +3,7 @@ COPY		tests/requirements.txt /requirements.txt
 COPY		helper/install_deps.sh /install_deps.sh
 # hadolint ignore=DL3018
 ENV		DEBIAN_FRONTEND=noninteractive
+ENV		HTTPS_SUPPORT=true
 RUN		apt-get update \
 		&& apt-get install --no-install-recommends -q --yes \
 			curl \
