use HTTPS_SUPPORT in github-workflow
Signed-off-by: Andrwe Lord Weber <github@andrwe.org>

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -22,11 +22,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: prepare environment
+        env:
+          HTTPS_SUPPORT: true
         run: |
           export DEBIAN_FRONTEND=noninteractive
           sudo apt-get update -qq --yes
           sudo apt-get install python3-pip --yes
-          sudo sh helper/install_deps.sh
+          sudo --preserve-env=HTTPS_SUPPORT sh helper/install_deps.sh
           # install via sudo to run pytest as root - see below
           sudo pip install -r ./tests/requirements.txt
           sudo systemctl disable --now privoxy || true
