implement OpenWRT support
Signed-off-by: Andrwe Lord Weber <github@andrwe.org>

--- a/tests/configs/debugging.conf
+++ b/tests/configs/debugging.conf
@@ -17,9 +17,9 @@ FILTERS=()
 
 # !! set these when config INIT_CONF doesn't exist and default values do not match your system !!
 # !! These values will be overwritten by INIT_CONF when exists !!
-PRIVOXY_USER="privoxy"
-PRIVOXY_GROUP="root"
-PRIVOXY_CONF="/etc/privoxy/config"
+#PRIVOXY_USER="privoxy"
+#PRIVOXY_GROUP="root"
+#PRIVOXY_CONF="/etc/privoxy/config"
 
 # name for lock file (default: script name)
 TMPNAME="$(basename "$(readlink -f "${0}")")"
