--- a/tests/Dockerfile_alpine
+++ b/tests/Dockerfile_alpine
@@ -8,6 +8,6 @@ RUN		apk add --no-cache --quiet build-base linux-headers py3-pip python3-dev sud
 		&& install -d -o root -g root /pytest_cache \
 		&& /install_deps.sh \
 		&& rm -f /install_deps.sh \
-		&& bash -c "for f in /etc/privoxy/*.new; do cp \$f \${f%.*};done"
+		&& bash -c "for f in /etc/privoxy/*.new; do cp -p \$f \${f%.*};done"
 WORKDIR		/app
 ENTRYPOINT	["pytest", "-v", "-s", "-o", "cache_dir=/pytest_cache", "--color", "yes"]
