--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,18 +31,9 @@ jobs:
 
       - name: Release
         uses: softprops/action-gh-release@v2
-        if: ${{ startsWith(github.ref, 'refs/tags/') && contains(github.ref, 'a') }}
-        with:
-          draft: true
-          prerelease: true
-          files: privoxy-blocklist.sh
-          generate_release_notes: true
-
-      - name: Release
-        uses: softprops/action-gh-release@v2
         if: ${{ startsWith(github.ref, 'refs/tags/') }}
         with:
-          draft: ${{ contains(github.ref, 'a') }}
-          prerelease: ${{ contains(github.ref, 'a') || contains(github.ref, 'rc') }}
+          draft: True
+          prerelease: ${{ contains(github.ref, '-a') || contains(github.ref, '-rc') }}
           files: privoxy-blocklist.sh
           generate_release_notes: true
