switch to openwrt-23.05 as latest has no gcc
Signed-off-by: Andrwe@Gitlab <alw+gitlab@andrwe.org>

--- a/tests/Dockerfile_openwrt
+++ b/tests/Dockerfile_openwrt
@@ -1,4 +1,4 @@
-FROM		openwrt/rootfs
+FROM		openwrt/rootfs:x86-64-23.05.3
 # hadolint ignore=DL3018
 RUN		mkdir /var/lock /var/run
 RUN		opkg update \
