fix github workflow for openwrt
Signed-off-by: Andrwe@Gitlab <alw+gitlab@andrwe.org>

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -79,7 +79,7 @@ jobs:
       actions: read
       contents: write
     container:
-      image: openwrt/rootfs:latest
+      image: openwrt/rootfs:x86-64-23.05.3
 
     steps:
       - name: Prepare OPKG
