--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,6 +39,8 @@ repos:
           - 'DL3008'
           - '--ignore'
           - 'DL3013'
+          - '--ignore'
+          - 'DL3059'
         types: [file]
         files: "^tests/Dockerfile_.*"
   - repo: https://github.com/PyCQA/isort
