--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,7 +29,7 @@ repos:
           - "4"
           - "--space-redirects"
   - repo: https://github.com/AleksaC/hadolint-py
-    rev: v2.12.0.3
+    rev: v2.12.1-beta
     hooks:
       - id: hadolint
         args:
@@ -43,38 +43,20 @@ repos:
           - 'DL3059'
         types: [file]
         files: "^tests/Dockerfile_.*"
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.13.2
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.4.1
     hooks:
-      - id: isort
-        args:
-          - '--profile'
-          - 'black'
-  - repo: https://github.com/psf/black
-    rev: 24.4.0
-    hooks:
-      - id: black
-  - repo: https://github.com/PyCQA/flake8
-    rev: 7.0.0
-    hooks:
-      - id: flake8
-        args:
-          - '--max-line-length'
-          - '99'
-  - repo: https://github.com/PyCQA/prospector
-    rev: v1.10.3
-    hooks:
-      - id: prospector
-        args:
-          - '--profile'
-          - '.ci_config/prospector.yaml'
+      - id: ruff
         additional_dependencies:
-          # cannot use with_ syntax as pre-commit.ci does not support it
-          - bandit
-          - mccabe
-          - mypy
-          - pydocstyle
-          - pylint
+          - pytest
+          - pytest-shell-utilities
+          - requests
+          - types-requests
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.9.0
+    hooks:
+      - id: mypy
+        additional_dependencies:
           - pytest
           - pytest-shell-utilities
           - requests
