add apparmore support
Signed-off-by: Andrwe@Gitlab <alw+gitlab@andrwe.org>

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           export DEBIAN_FRONTEND=noninteractive
           sudo apt-get update -qq --yes
-          sudo apt-get install python3-pip --yes
+          sudo apt-get install python3-pip apparmor --yes
           sudo --preserve-env=HTTPS_SUPPORT sh helper/install_deps.sh
           # install via sudo to run pytest as root - see below
           sudo pip install -r ./tests/requirements.txt
