--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -25,13 +25,7 @@ jobs:
         env:
           HTTPS_SUPPORT: true
         run: |
-          export DEBIAN_FRONTEND=noninteractive
-          sudo apt-get update -qq --yes
-          sudo apt-get install python3-pip apparmor --yes
-          sudo --preserve-env=HTTPS_SUPPORT sh helper/install_deps.sh
-          # install via sudo to run pytest as root - see below
-          sudo pip install -r ./tests/requirements.txt
-          sudo systemctl disable --now privoxy || true
+          sudo --preserve-env=HTTPS_SUPPORT,CI sh helper/install_deps.sh
 
       - name: run pytest
         env:
@@ -40,7 +34,7 @@ jobs:
         run: |
           sudo pkill -9 privoxy || true
           # run pytest as sudo to allow pytestshellutils to stop privoxy
-          sudo --preserve-env=ACTIONS_STEP_DEBUG,RUNNER_DEBUG pytest -v -s --color yes tests/
+          sudo --preserve-env=ACTIONS_STEP_DEBUG,RUNNER_DEBUG /.venv/bin/pytest -v -s --color yes tests/
 
   pytest-alpine:
     name: Pytest-Alpine
@@ -57,20 +51,14 @@ jobs:
 
       - name: prepare environment
         run: |
-          apk add --no-cache --quiet build-base linux-headers py3-pip python3-dev
-          python3 -m venv .venv
-          . .venv/bin/activate
-          pip install --no-cache-dir -qr tests/requirements.txt
           sh helper/install_deps.sh
-          bash -c "for f in /etc/privoxy/*.new; do cp -p \$f \${f%.*};done"
 
       - name: run pytest
         env:
           ACTIONS_STEP_DEBUG: ${{ vars.ACTIONS_STEP_DEBUG }}
           RUNNER_DEBUG: ${{ runner.debug }}
         run: |
-          . .venv/bin/activate
-          pytest -v -s --color yes tests/
+          /.venv/bin/pytest -v -s --color yes tests/
 
   pytest-openwrt:
     name: Pytest-OpenWRT
@@ -103,16 +91,11 @@ jobs:
 
       - name: prepare environment
         run: |
-          opkg install curl gcc make python3 python3-pip python3-dev
-          pip install --no-cache-dir -qr tests/requirements.txt
           sh helper/install_deps.sh
-          /etc/rc.d/K10privoxy stop || true
-          echo "        list    listen_address  '127.0.0.1:8118'" >> /etc/config/privoxy
-          echo "        list    permit_access           '127.0.0.0/24'" >> /etc/config/privoxy
 
       - name: run pytest
         env:
           ACTIONS_STEP_DEBUG: ${{ vars.ACTIONS_STEP_DEBUG }}
           RUNNER_DEBUG: ${{ runner.debug }}
         run: |
-          pytest -v -s --color yes tests/
+          /.venv/bin/pytest -v -s --color yes tests/
