--- a/tests/Dockerfile_alpine
+++ b/tests/Dockerfile_alpine
@@ -1,14 +1,11 @@
 FROM		alpine:latest
-COPY		tests/requirements.txt /requirements.txt
-COPY		helper/install_deps.sh /install_deps.sh
+COPY		tests/requirements.txt /tests/requirements.txt
+COPY		helper/install_deps.sh /helper/install_deps.sh
 RUN		install -d -o root -g root /pytest_cache
 # hadolint ignore=DL3018
-RUN		apk add --no-cache --quiet build-base linux-headers py3-pip python3-dev sudo
-RUN		pip install --no-cache-dir --break-system-packages -qr /requirements.txt \
-		&& rm -f /requirements.txt
-RUN		/install_deps.sh
-RUN		bash -c "for f in /etc/privoxy/*.new; do cp -p \$f \${f%.*};done"
-RUN		/install_deps.sh \
-		&& rm -f /install_deps.sh
+RUN		apk add --no-cache --quiet sudo
+ENV		CI=true
+RUN		/helper/install_deps.sh \
+		&& rm -rf /helper/
 WORKDIR		/app
-ENTRYPOINT	["pytest", "-v", "-s", "-o", "cache_dir=/pytest_cache", "--color", "yes"]
+ENTRYPOINT	["/.venv/bin/pytest", "-v", "-s", "-o", "cache_dir=/pytest_cache", "--color", "yes"]
